chinese relative links converted to absolute

--- a/public/lang/cn/index.html
+++ b/public/lang/cn/index.html
@@ -32,7 +32,7 @@
 			<div class="flex justify-between">
 				<!-- logo -->
 				<div class="flex items-center lg:mr-10 xl:pl-10">
-					<a href="/" class="flex items-center">
+					<a href="/lang/cn/" class="flex items-center">
 						<img class="h-9 rounded-lg" src="/assets/logo.svg" alt="" />
 						<span class="text-2xl pl-2 bg-gradient-to-b from-logo-pink to-logo-orange text-transparent bg-clip-text font-semibold">PlayCover</span>
 					</a>
@@ -40,12 +40,12 @@
 
 				<!-- primary nav -->
 				<div class="hidden xl:flex items-center space-x-10 pt-1 text-[1.05rem]">
-					<a href="/" class="text-yellow-500 border-b-2 border-yellow-500 py-3"> 主页 </a>
+					<a href="/lang/cn/" class="text-yellow-500 border-b-2 border-yellow-500 py-3"> 主页 </a>
 					<!-- download nav download -->
 					<a href="" class="download-buttons text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> 下载 </a>
-					<a href="/changelog/" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> 更新日志 </a>
-					<a href="/faq/" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> 常见问题解答 </a>
-					<a href="/credits/" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> 学分 </a>
+					<a href="/lang/cn/changelog/" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> 更新日志 </a>
+					<a href="/lang/cn/faq/" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> 常见问题解答 </a>
+					<a href="/lang/cn/credits/" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> 学分 </a>
 					<button class="contact-nav-button text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150">联系我们</button>
 				</div>
 
@@ -79,7 +79,7 @@
 								<!-- text -->
 								<ul class="space-y-4">
 									<li>
-										<a href="/" class="text-gray-700 hover:text-yellow-500 dark:text-gray-300 dark:hover:text-yellow-500 transition-colors duration-200"> English </a>
+										<a href="/index.html" class="text-gray-700 hover:text-yellow-500 dark:text-gray-300 dark:hover:text-yellow-500 transition-colors duration-200"> English </a>
 									</li>
 									<li>
 										<a href="/lang/ru" class="text-gray-700 hover:text-yellow-500 dark:text-gray-300 dark:hover:text-yellow-500 transition-colors duration-200"> Русский </a>
@@ -139,11 +139,11 @@
 			<!-- mobile menu -->
 			<div class="mobile-menu max-h-[85vh] overflow-auto hidden relative">
 				<div class="flex flex-col items-center space-y-5 pt-5 pb-3 text-lg md:text-xl">
-					<a href="./" class="block text-yellow-600 pb-1 border-b-2 border-yellow-600">主页 </a>
+					<a href="/lang/cn" class="block text-yellow-600 pb-1 border-b-2 border-yellow-600">主页 </a>
 					<a href="" class="download-buttons block text-gray-600 dark:text-gray-300">下载 </a>
-					<a href="/changelog/" class="block text-gray-600 dark:text-gray-300">更新日志 </a>
-					<a href="/faq/" class="block text-gray-600 dark:text-gray-300">常见问题解答 </a>
-					<a href="/credits/" class="block text-gray-600 dark:text-gray-300">学分</a>
+					<a href="/lang/cn/changelog/" class="block text-gray-600 dark:text-gray-300">更新日志 </a>
+					<a href="/lang/cn/faq/" class="block text-gray-600 dark:text-gray-300">常见问题解答 </a>
+					<a href="/lang/cn/credits/" class="block text-gray-600 dark:text-gray-300">学分</a>
 					<button class="mobile-contact-button block text-gray-600 dark:text-gray-300">联系我们</button>
 
 					<!-- mobile language button -->
@@ -160,7 +160,7 @@
 					<!-- mobile language menu -->
 					<div class="mobile-language-menu hidden rounded-lg">
 						<div class="w-[85vw] bg-gray-50 dark:bg-[#1E1E1E] shadow-inner grid grid-cols-2 place-items-center py-4 gap-y-5 text-gray-600 dark:text-gray-300 transition duration-200 ease-in-out">
-							<a href="/">English</a>
+							<a href="/lang/cn/">English</a>
 							<a href="/lang/ru">Pусский</a>
 							<a href="/lang/de">Deutsch</a>
 							<a href="/lang/jp" class="hidden">ホーム </a>
@@ -197,7 +197,7 @@
 						<div class="flex flex-col lg:flex-row space-y-6 lg:space-y-0 lg:space-x-4 pt-8 lg:pt-6 items-center text-center">
 							<!-- M1 -->
 							<div class="flex items-center md:h-10 md:w-56">
-								<a class="py-2 px-16 drop-shadow-sm bg-yellow-500 dark:bg-[#791c0c] text-white dark:text-gray-200 rounded-md cursor-pointer border-b-2 md:hover:border-b-4 border-yellow-600 md:hover:translate-y-[-0.15rem] active:border-none dark:border-[#410e05] dark:active:border-none transition duration-100 ease-linear" href=""> 下载 M1 Mac </a>
+								<a class="py-2 px-16 drop-shadow-sm bg-yellow-500 dark:bg-[#791c0c] text-white dark:text-gray-200 rounded-md cursor-pointer border-b-2 md:hover:border-b-4 border-yellow-600 md:hover:translate-y-[-0.15rem] active:border-none dark:border-[#410e05] dark:active:border-none transition duration-100 ease-linear download-buttons" href=""> 下载 M1 Mac </a>
 							</div>
 
 							<!-- intel -->
