--- a/public/lang/de/index.html
+++ b/public/lang/de/index.html
@@ -198,7 +198,7 @@
 						<div class="flex flex-col lg:flex-row space-y-6 lg:space-y-0 lg:space-x-4 pt-8 lg:pt-6 items-center text-center">
 							<!-- M1 -->
 							<div class="flex items-center md:h-10 md:w-52">
-								<a class="download-buttons py-2 px-4 drop-shadow-sm bg-yellow-500 dark:bg-[#791c0c] text-white dark:text-gray-200 rounded-md cursor-pointer border-b-2 md:hover:border-b-4 border-yellow-600 md:hover:translate-y-[-0.15rem] active:border-none dark:border-[#410e05] dark:active:border-none transition duration-100 ease-linear" href=""> Herunterladen for M1 Mac </a>
+								<a class="download-buttons py-2 px-4 drop-shadow-sm bg-yellow-500 dark:bg-[#791c0c] text-white dark:text-gray-200 rounded-md cursor-pointer border-b-2 md:hover:border-b-4 border-yellow-600 md:hover:translate-y-[-0.15rem] active:border-none dark:border-[#410e05] dark:active:border-none transition duration-100 ease-linear download-buttons" href=""> Herunterladen for M1 Mac </a>
 							</div>
 
 							<!-- intel -->
