chinese relative links converted to absolute

--- a/public/lang/cn/credits/index.html
+++ b/public/lang/cn/credits/index.html
@@ -156,7 +156,7 @@
 					<!-- mobile language menu -->
 					<div class="mobile-language-menu hidden rounded-lg">
 						<div class="w-[85vw] bg-gray-50 dark:bg-[#1E1E1E] shadow-inner grid grid-cols-2 place-items-center py-4 gap-y-5 text-gray-600 dark:text-gray-300 transition duration-200 ease-in-out">
-							<a href="/lang/cn/">English</a>
+							<a href="/index.html">English</a>
 							<a href="/lang/ru">Pусский</a>
 							<a href="/lang/de">Deutsch</a>
 							<a href="/lang/jp" class="hidden">ホーム </a>
@@ -551,7 +551,7 @@
 				<section class="flex flex-col md:flex-row md:justify-between pb-5 md:items-center space-y-2">
 					<!-- legal notice and copyright claim -->
 					<div class="flex items-center">
-						<a href="/legal-notice/" class="pr-4 hover:text-yellow-500 underline text-left">法律声明</a>
+						<a href="/lang/cn/legal-notice/" class="pr-4 hover:text-yellow-500 underline text-left">法律声明</a>
 						<a href="mailto:write2me4help@gmail.com" class="underline hover:text-yellow-500">版权声明</a>
 					</div>
 
