--- a/public/lang/cn/legal-notice/index.html
+++ b/public/lang/cn/legal-notice/index.html
@@ -181,8 +181,8 @@
 			<header class="pt-32 xl:pt-36 pb-2 flex justify-center">
 				<span class="hidden lg:flex font-semibold lg:text-5xl text-gray-700 dark:text-yellow-500 transition duration-200">法律声明</span>
 				<span class="lg:hidden flex flex-col text-4xl font-semibold text-gray-700 dark:text-yellow-500 transition duration-200 space-y-3">
-					<p>Legal</p>
-					<p>Notice</p>
+					<p>合法的</p>
+					<p>注意</p>
 				</span>
 			</header>
 
