--- a/public/lang/ru/credits/index.html
+++ b/public/lang/ru/credits/index.html
@@ -28,7 +28,7 @@
 			<div class="flex justify-between">
 				<!-- logo -->
 				<div class="flex items-center lg:mr-4 xl:pl-10">
-					<a href="/" class="flex items-center">
+					<a href="/lang/ru" class="flex items-center">
 						<img class="h-9 rounded-lg" src="/assets/logo.svg" alt="" />
 						<span class="text-2xl pl-2 bg-gradient-to-b from-logo-pink to-logo-orange text-transparent bg-clip-text font-semibold">PlayCover</span>
 					</a>
@@ -36,12 +36,12 @@
 
 				<!-- primary nav -->
 				<div class="hidden xl:flex items-center space-x-10 pt-1 text-[1.05rem]">
-					<a href="/" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> Домой </a>
+					<a href="/lang/ru" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> Домой </a>
 					<!-- download nav download -->
 					<a href="" class="download-buttons text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> Скачать </a>
-					<a href="/changelog/" class="text-gray-800 w-44 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> Журнал изменений </a>
-					<a href="/faq/" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> ЧаВо </a>
-					<a href="/credits/" class="text-yellow-500 border-b-2 border-yellow-500 py-3"> Кредиты </a>
+					<a href="/lang/ru/changelog/" class="text-gray-800 w-44 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> Журнал изменений </a>
+					<a href="/lang/ru/faq/" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> ЧаВо </a>
+					<a href="/lang/ru/credits/" class="text-yellow-500 border-b-2 border-yellow-500 py-3"> Кредиты </a>
 					<button class="contact-nav-button text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150">Связаться с нами</button>
 				</div>
 
@@ -79,7 +79,7 @@
 										<a href="/lang/cn" class="text-gray-700 hover:text-yellow-500 dark:text-gray-300 dark:hover:text-yellow-500 transition-colors duration-200"> 简体中文 </a>
 									</li>
 									<li>
-										<a href="/" class="text-gray-700 hover:text-yellow-500 dark:text-gray-300 dark:hover:text-yellow-500 transition-colors duration-200"> English </a>
+										<a href="/index.html" class="text-gray-700 hover:text-yellow-500 dark:text-gray-300 dark:hover:text-yellow-500 transition-colors duration-200"> English </a>
 									</li>
 									<li class="hidden">
 										<a href="/lang/jp" class="text-gray-700 hover:text-yellow-500 dark:text-gray-300 dark:hover:text-yellow-500 transition-colors duration-200"> 日本語 </a>
@@ -137,11 +137,11 @@
 			<!-- mobile menu -->
 			<div class="mobile-menu max-h-[85vh] overflow-auto hidden relative">
 				<div class="flex flex-col items-center space-y-5 pt-5 pb-3 text-lg md:text-xl">
-					<a href="/" class="block text-gray-600 dark:text-gray-300">Домой</a>
+					<a href="/lang/ru" class="block text-gray-600 dark:text-gray-300">Домой</a>
 					<a href="" class="download-buttons block text-gray-600 dark:text-gray-300">Скачать</a>
-					<a href="./" class="block text-gray-600 dark:text-gray-300">Журнал изменений</a>
-					<a href="/faq/" class="block text-gray-600 dark:text-gray-300">ЧаВо</a>
-					<a href="/credits/" class="block text-yellow-600 pb-1 border-b-2 border-yellow-600">Кредиты</a>
+					<a href="/lang/ru/changelog" class="block text-gray-600 dark:text-gray-300">Журнал изменений</a>
+					<a href="/lang/ru/faq/" class="block text-gray-600 dark:text-gray-300">ЧаВо</a>
+					<a href="/lang/ru/credits/" class="block text-yellow-600 pb-1 border-b-2 border-yellow-600">Кредиты</a>
 					<button class="mobile-contact-button block text-gray-600 dark:text-gray-300">Связаться с нами</button>
 
 					<!-- mobile language button -->
@@ -158,7 +158,7 @@
 					<div class="mobile-language-menu hidden rounded-lg">
 						<div class="w-[85vw] bg-gray-50 dark:bg-[#1E1E1E] shadow-inner grid grid-cols-2 place-items-center py-4 gap-y-5 text-gray-600 dark:text-gray-300 transition duration-200 ease-in-out">
 							<a href="/lang/cn">简体中文</a>
-							<a href="/">English</a>
+							<a href="/index.html">English</a>
 							<a href="/lang/de">Deutsch</a>
 							<a href="/lang/jp" class="hidden">ホーム </a>
 							<a href="/lang/es">Español</a>
@@ -554,7 +554,7 @@
 				<section class="flex flex-col md:flex-row md:justify-between pb-5 md:items-center space-y-2">
 					<!-- legal notice and copyright claim -->
 					<div class="flex items-center">
-						<a href="/legal-notice/" class="pr-4 hover:text-yellow-500 underline text-left">Legal Notice</a>
+						<a href="/lang/ru/legal-notice/" class="pr-4 hover:text-yellow-500 underline text-left">Правовая информация</a>
 						<a href="mailto:write2me4help@gmail.com" class="underline hover:text-yellow-500">Жалобы на нарушение авторских прав</a>
 					</div>
 
