--- a/public/faq/index.html
+++ b/public/faq/index.html
@@ -133,7 +133,7 @@
 				</div>
 			</div>
 			<!-- mobile menu -->
-			<div class="mobile-menu max-h-[85vh] overflow-auto hidden relative">
+			<div class="mobile-menu xl:hidden max-h-[85vh] overflow-auto hidden relative">
 				<div class="flex flex-col items-center space-y-5 pt-5 pb-3 text-lg md:text-xl">
 					<a href="/" class="block text-gray-600 dark:text-gray-300">Home</a>
 					<a href="" class="download-buttons block text-gray-600 dark:text-gray-300">Download</a>
