--- a/public/lang/de/credits/index.html
+++ b/public/lang/de/credits/index.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta name="description" content="site description" />
 		<meta name="keywords" content="8-12 words max" />
-		<title>Credits</title>
+		<title>Kredite</title>
 		<link href="/css/styles.css" rel="stylesheet" />
 		<link rel="shortcut icon" type="image/jpg" href="/assets/favicon.png" />
 		<script src="/js/local-storage-track.js"></script>
@@ -28,7 +28,7 @@
 			<div class="flex justify-between">
 				<!-- logo -->
 				<div class="flex items-center lg:mr-10 xl:pl-10">
-					<a href="/" class="flex items-center">
+					<a href="/lang/de" class="flex items-center">
 						<img class="h-9 rounded-lg" src="/assets/logo.svg" alt="" />
 						<span class="text-2xl pl-2 bg-gradient-to-b from-logo-pink to-logo-orange text-transparent bg-clip-text font-semibold">PlayCover</span>
 					</a>
@@ -36,12 +36,12 @@
 
 				<!-- primary nav -->
 				<div class="hidden xl:flex items-center space-x-10 pt-1 text-[1.05rem]">
-					<a href="/" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> Home </a>
+					<a href="/lang/de" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> Home </a>
 					<!-- download nav download -->
 					<a href="" class="download-buttons text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> Herunterladen </a>
-					<a href="/changelog/" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> Änderungsprotokoll </a>
-					<a href="/faq/" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> FAQ </a>
-					<a href="/credits/" class="text-yellow-500 border-b-2 border-yellow-500 py-3"> Credits </a>
+					<a href="/lang/de/changelog/" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> Änderungsprotokoll </a>
+					<a href="/lang/de/faq/" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> FAQ </a>
+					<a href="/lang/de/credits/" class="text-yellow-500 border-b-2 border-yellow-500 py-3"> Kredite </a>
 					<button class="contact-nav-button text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150">Kontakt</button>
 				</div>
 
@@ -84,7 +84,7 @@
 										<a href="/lang/jp" class="text-gray-700 hover:text-yellow-500 dark:text-gray-300 dark:hover:text-yellow-500 transition-colors duration-200"> 日本語 </a>
 									</li>
 									<li>
-										<a href="/" class="text-gray-700 hover:text-yellow-500 dark:text-gray-300 dark:hover:text-yellow-500 transition-colors duration-200"> English </a>
+										<a href="/index.html" class="text-gray-700 hover:text-yellow-500 dark:text-gray-300 dark:hover:text-yellow-500 transition-colors duration-200"> English </a>
 									</li>
 									<li>
 										<a href="/lang/id" class="text-gray-700 hover:text-yellow-500 dark:text-gray-300 dark:hover:text-yellow-500 transition-colors duration-200"> Bahasa Indonesia </a>
@@ -134,13 +134,13 @@
 				</div>
 			</div>
 			<!-- mobile menu -->
-			<div class="mobile-menu max-h-[85vh] overflow-auto hidden relative">
+			<div class="mobile-menu xl:hidden max-h-[85vh] overflow-auto hidden relative">
 				<div class="flex flex-col items-center space-y-5 pt-5 pb-3 text-lg md:text-xl">
-					<a href="/" class="block text-gray-600 dark:text-gray-300">Home</a>
+					<a href="/lang/de" class="block text-gray-600 dark:text-gray-300">Home</a>
 					<a href="" class="download-buttons block text-gray-600 dark:text-gray-300">Herunterladen</a>
-					<a href="./" class="block text-gray-600 dark:text-gray-300">Änderungsprotokoll</a>
-					<a href="/faq/" class="block text-gray-600 dark:text-gray-300">FAQ</a>
-					<a href="/credits/" class="block text-yellow-600 pb-1 border-b-2 border-yellow-600">Credits</a>
+					<a href="/lang/de/changelog" class="block text-gray-600 dark:text-gray-300">Änderungsprotokoll</a>
+					<a href="/lang/de/faq/" class="block text-gray-600 dark:text-gray-300">FAQ</a>
+					<a href="/lang/de/credits/" class="block text-yellow-600 pb-1 border-b-2 border-yellow-600">Kredite</a>
 					<button class="mobile-contact-button block text-gray-600 dark:text-gray-300">Kontakt</button>
 
 					<!-- mobile language button -->
@@ -158,7 +158,7 @@
 						<div class="w-[85vw] bg-gray-50 dark:bg-[#1E1E1E] shadow-inner grid grid-cols-2 place-items-center py-4 gap-y-5 text-gray-600 dark:text-gray-300 transition duration-200 ease-in-out">
 							<a href="/lang/cn">简体中文</a>
 							<a href="/lang/ru">Pусский</a>
-							<a href="/">English</a>
+							<a href="/index.html">English</a>
 							<a href="/lang/jp" class="hidden">ホーム </a>
 							<a href="/lang/es">Español</a>
 							
@@ -179,9 +179,9 @@
 		<main class="pb-16">
 			<!-- heading -->
 			<header class="pt-32 xl:pt-36 pb-2 flex justify-center text-gray-700 dark:text-yellow-500 transition duration-200">
-				<span class="hidden lg:flex font-semibold lg:text-5xl">Credits</span>
+				<span class="hidden lg:flex font-semibold lg:text-5xl">Kredite</span>
 				<span class="lg:hidden flex flex-col items-center text-4xl font-semibold space-y-3">
-					<p>Credits</p>
+					<p>Kredite</p>
 				</span>
 			</header>
 
@@ -551,7 +551,7 @@
 				<section class="flex flex-col md:flex-row md:justify-between pb-5 md:items-center space-y-2">
 					<!-- legal notice and copyright claim -->
 					<div class="flex items-center">
-						<a href="/legal-notice/" class="pr-4 hover:text-yellow-500 underline text-left">Legal Notice</a>
+						<a href="/lang/de/legal-notice/" class="pr-4 hover:text-yellow-500 underline text-left">Rechtlicher Hinweis</a>
 						<a href="mailto:write2me4help@gmail.com" class="underline hover:text-yellow-500">Urheberrechtsansprüche</a>
 					</div>
 
