--- a/public/lang/de/legal-notice/index.html
+++ b/public/lang/de/legal-notice/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 	<head>
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta name="description" content="site description" />
 		<meta name="keywords" content="8-12 words max" />
-		<title>Legal Notice</title>
+		<title>Rechtlicher Hinweis</title>
 		<link href="/css/styles.css" rel="stylesheet" />
 		<link rel="shortcut icon" type="image/jpg" href="/assets/favicon.png" />
 		<script src="/js/local-storage-track.js"></script>
@@ -28,7 +28,7 @@
 			<div class="flex justify-between">
 				<!-- logo -->
 				<div class="flex items-center lg:mr-10 xl:pl-10">
-					<a href="/" class="flex items-center">
+					<a href="/lang/de" class="flex items-center">
 						<img class="h-9 rounded-lg" src="/assets/logo.svg" alt="" />
 						<span class="text-2xl pl-2 bg-gradient-to-b from-logo-pink to-logo-orange text-transparent bg-clip-text font-semibold">PlayCover</span>
 					</a>
@@ -36,13 +36,13 @@
 
 				<!-- primary nav -->
 				<div class="hidden xl:flex items-center space-x-10 pt-1 text-[1.05rem]">
-					<a href="/" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> Home </a>
+					<a href="/lang/de" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> Home </a>
 					<!-- download nav download -->
-					<a href="" class="download-buttons text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> Download </a>
-					<a href="/changelog/" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> Changelog </a>
-					<a href="/faq/" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> FAQ </a>
-					<a href="/credits/" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> Credits </a>
-					<button class="contact-nav-button text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150">Contact Us</button>
+					<a href="" class="download-buttons text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> Herunterladen </a>
+					<a href="/lang/de/changelog/" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> Änderungsprotokoll </a>
+					<a href="/lang/de/faq/" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> FAQ </a>
+					<a href="/lang/de/credits/" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> Kredite </a>
+					<button class="contact-nav-button text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150">Kontakt</button>
 				</div>
 
 				<!-- secondary nav -->
@@ -51,7 +51,7 @@
 					<div class="relative">
 						<div class="h-[3.5rem] flex items-center">
 							<button class="group donate-nav-button border-b-2 border-yellow-500 hover:border-b-4 bg-yellow-400 dark:bg-[#791c0c] dark:border-[#410e05] active:border-none rounded-md px-3 py-[0.29rem] transition duration-100 ease-linear md:hover:translate-y-[-0.15rem]">
-								<span class="text-[1.05rem] text-white transition-colors duration-200"> Donate </span>
+								<span class="text-[1.05rem] text-white transition-colors duration-200"> Spenden </span>
 							</button>
 						</div>
 					</div>
@@ -61,7 +61,7 @@
 						<li class="relative text-[1.05rem]">
 							<!-- language btn -->
 							<button class="language-button flex items-center space-x-1 border border-gray-500 dark:border-gray-400 rounded-md px-3 py-1 transition-colors duration-200 group hover:border-yellow-600 dark:hover:border-yellow-500">
-								<span class="text-gray-800 dark:text-gray-300 transition-colors duration-200 group-hover:text-yellow-600 dark:group-hover:text-yellow-500"> English </span>
+								<span class="text-gray-800 dark:text-gray-300 transition-colors duration-200 group-hover:text-yellow-600 dark:group-hover:text-yellow-500"> Deutsch </span>
 								<!-- icon -->
 								<div class="">
 									<svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 transition duration-200 dark:text-gray-300 group-hover:text-yellow-600 dark:group-hover:text-yellow-500 transform language-menu-icon" fill="none" viewbox="0 0 24 24" stroke="currentColor">
@@ -84,7 +84,7 @@
 										<a href="/lang/jp" class="text-gray-700 hover:text-yellow-500 dark:text-gray-300 dark:hover:text-yellow-500 transition-colors duration-200"> 日本語 </a>
 									</li>
 									<li>
-										<a href="/lang/de" class="text-gray-700 hover:text-yellow-500 dark:text-gray-300 dark:hover:text-yellow-500 transition-colors duration-200"> Deutsch </a>
+										<a href="/index.html" class="text-gray-700 hover:text-yellow-500 dark:text-gray-300 dark:hover:text-yellow-500 transition-colors duration-200"> English </a>
 									</li>
 									<li>
 										<a href="/lang/id" class="text-gray-700 hover:text-yellow-500 dark:text-gray-300 dark:hover:text-yellow-500 transition-colors duration-200"> Bahasa Indonesia </a>
@@ -133,20 +133,19 @@
 					</div>
 				</div>
 			</div>
-
 			<!-- mobile menu -->
-			<div class="mobile-menu max-h-[85vh] overflow-auto hidden relative">
+			<div class="mobile-menu xl:hidden max-h-[85vh] overflow-auto hidden relative">
 				<div class="flex flex-col items-center space-y-5 pt-5 pb-3 text-lg md:text-xl">
-					<a href="/" class="block text-gray-600 dark:text-gray-300">Home</a>
-					<a href="" class="download-buttons block text-gray-600 dark:text-gray-300">Download</a>
-					<a href="/changelog/" class="block text-gray-600 dark:text-gray-300">Changelog</a>
-					<a href="/faq/" class="block text-gray-600 dark:text-gray-300">FAQ</a>
-					<a href="/credits/" class="block text-gray-600 dark:text-gray-300">Credits</a>
-					<button class="mobile-contact-button block text-gray-600 dark:text-gray-300">Contact Us</button>
+					<a href="/lang/de" class="block text-gray-600 dark:text-gray-300">Home</a>
+					<a href="" class="download-buttons block text-gray-600 dark:text-gray-300">Herunterladen</a>
+					<a href="/lang/de/changelog" class="block text-gray-600 dark:text-gray-300">Änderungsprotokoll</a>
+					<a href="/lang/de/faq/" class="block text-gray-600 dark:text-gray-300">FAQ</a>
+					<a href="/lang/de/credits/" class="block text-gray-600 dark:text-gray-300">Kredite</a>
+					<button class="mobile-contact-button block text-gray-600 dark:text-gray-300">Kontakt</button>
 
 					<!-- mobile language button -->
 					<button class="mobile-language-button text-gray-600 dark:text-gray-300 flex items-center space-x-1">
-						<p class="pl-3">English</p>
+						<p class="pl-3">Deutsch</p>
 						<!-- icon -->
 						<div class="pt-0">
 							<svg xmlns="http://www.w3.org/2000/svg" class="mobile-lang-icon transform h-5 w-5 transition-colors duration-200 group-hover:text-pink-500" fill="none" viewbox="0 0 24 24" stroke="currentColor">
@@ -159,7 +158,7 @@
 						<div class="w-[85vw] bg-gray-50 dark:bg-[#1E1E1E] shadow-inner grid grid-cols-2 place-items-center py-4 gap-y-5 text-gray-600 dark:text-gray-300 transition duration-200 ease-in-out">
 							<a href="/lang/cn">简体中文</a>
 							<a href="/lang/ru">Pусский</a>
-							<a href="/lang/de">Deutsch</a>
+							<a href="/index.html">English</a>
 							<a href="/lang/jp" class="hidden">ホーム </a>
 							<a href="/lang/es">Español</a>
 							
@@ -168,12 +167,11 @@
 						</div>
 					</div>
 
-					<button class="mobile-donate-button block text-gold">Donate</button>
+					<button class="mobile-donate-button block text-gold">Spenden</button>
 				</div>
 			</div>
 		</nav>
 
-		<!-- auto closer for lang menu -->
 		<!-- auto closer for lang menu -->
 		<div class="auto-closer hidden z-10 w-[100%] h-2 absolute"></div>
 
@@ -181,31 +179,31 @@
 		<main class="pb-16">
 			<!-- heading -->
 			<header class="pt-32 xl:pt-36 pb-2 flex justify-center">
-				<span class="hidden lg:flex font-semibold lg:text-5xl text-gray-700 dark:text-yellow-500 transition duration-200">Legal Notice</span>
+				<span class="hidden lg:flex font-semibold lg:text-5xl text-gray-700 dark:text-yellow-500 transition duration-200">Rechtlicher Hinweis</span>
 				<span class="lg:hidden flex flex-col text-4xl font-semibold text-gray-700 dark:text-yellow-500 transition duration-200 space-y-3">
-					<p>Legal</p>
-					<p>Notice</p>
+					<p>Rechtlicher</p>
+					<p>Hinweis</p>
 				</span>
 			</header>
 
 			<!-- paras -->
 			<section class="px-10 lg:px-52 pt-20 space-y-10 text-gray-700 dark:text-gray-300">
 				<section class="space-y-2">
-					<h2 class="font-medium text-2xl">Copyright Notice</h2>
+					<h2 class="font-medium text-2xl">Copyright-Hinweis</h2>
 					<div class="pl-5 pt-2">
 						<ul class="list-outside list-disc space-y-3">
-							<li>All contents, software, programs, code, technologies and user interfaces contained on this website are protected by the copyright laws. The copyright belongs to Alexandr Dorofeev and is subject to relevant copyright conventions.</li>
-							<li>Alexandr Dorofeev reserves the right to pursue legal responsibilities if any use of the aforesaid copyright is beyond the scope of reasonable use and without its written permission.</li>
+							<li>Alle Inhalte, Software, Programme, Codes, Technologien und Benutzeroberflächen, die auf dieser Website enthalten sind, sind durch das Urheberrecht geschützt. Das Urheberrecht liegt bei Alexandr Dorofeev und unterliegt den einschlägigen Urheberrechtskonventionen.</li>
+							<li>Alexandr Dorofeev behält sich das Recht vor, rechtliche Schritte einzuleiten, wenn eine Nutzung des oben genannten Urheberrechts über den Rahmen der angemessenen Nutzung hinausgeht und ohne seine schriftliche Genehmigung erfolgt.</li>
 						</ul>
 					</div>
 				</section>
 
 				<section class="space-y-2">
-					<h2 class="font-medium text-2xl">Trademark Statement</h2>
+					<h2 class="font-medium text-2xl">Erklärung zum Warenzeichen</h2>
 					<div class="pl-5 pt-2">
 						<ul class="list-outside list-disc space-y-3">
-							<li>All trademarks and marks used and displayed on this website belong to Alexandr Dorofeev and are protected by international conventions.</li>
-							<li>Without prior written permission of Alexandr Dorofeev, trademarks, marks and software names of Alexandr Dorofeev shall not be used in any manner whatsoever. Unauthorized use of the aforesaid trademarks may constitute trademark infringement and Alexandr Dorofeev reserves the right to pursue legal responsibilities.</li>
+							<li>Alle auf dieser Website verwendeten und dargestellten Warenzeichen und Marken sind Eigentum von Alexandr Dorofeev und durch internationale Konventionen geschützt.</li>
+							<li>Ohne vorherige schriftliche Genehmigung von Alexandr Dorofeev dürfen Warenzeichen, Marken und Softwarenamen von Alexandr Dorofeev in keiner Weise verwendet werden. Die unbefugte Verwendung der oben genannten Marken kann eine Markenverletzung darstellen und Alexandr Dorofeev behält sich das Recht vor, rechtliche Schritte einzuleiten.</li>
 						</ul>
 					</div>
 				</section>
@@ -227,7 +225,7 @@
 					</div>
 
 					<!-- text -->
-					<p class="pt-12 pb-8 font-light text-white text-3xl">Donate via...</p>
+					<p class="pt-12 pb-8 font-light text-white text-3xl">Spenden über...</p>
 
 					<!-- donate options -->
 					<div class="flex items-center pb-4 space-x-4 px-8 lg:px-0">
@@ -293,7 +291,7 @@
 					<!-- content -->
 					<div class="flex flex-col items-center justify-center pt-2 md:pt-0">
 						<!-- heading -->
-						<p class="pt-12 pb-8 font-light text-white text-3xl md:text-4xl">Contact Details</p>
+						<p class="pt-12 pb-8 font-light text-white text-3xl md:text-4xl">Kontakt</p>
 
 						<!-- details -->
 						<div class="flex flex-col items-center space-y-6 pb-10 pt-3">
@@ -311,7 +309,7 @@
 								<svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 									<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9.75 17L9 20l-1 1h8l-1-1-.75-3M3 13h18M5 17h14a2 2 0 002-2V5a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z" />
 								</svg>
-								<p class="text-lg font-medium pr-2 pl-1">Website</p>
+								<p class="text-lg font-medium pr-2 pl-1">Webseite</p>
 								<a href="mailto:Jay@playcover.app">AJ - jay@playcover.app</a>
 							</div>
 
@@ -330,7 +328,7 @@
 								<svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 									<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5.121 17.804A13.937 13.937 0 0112 16c2.5 0 4.847.655 6.879 1.804M15 10a3 3 0 11-6 0 3 3 0 016 0zm6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
 								</svg>
-								<p class="text-lg font-medium pr-2 pl-1">Commercial Agent</p>
+								<p class="text-lg font-medium pr-2 pl-1">Handelsvertreter</p>
 								<a href="mailto:ke@playcover.app">ProfiSpieler - ke@playcover.app</a>
 							</div>
 						</div>
@@ -347,18 +345,18 @@
 					<!-- text -->
 					<div class="pt-6 md:pt-0 flex flex-col space-y-1">
 						<!-- logo -->
-						<h1 class="font-semibold text-xl bg-gradient-to-b from-logo-pink to-logo-orange text-transparent bg-clip-text">A PlayCover Team Product</h1>
+						<h1 class="font-semibold text-xl bg-gradient-to-b from-logo-pink to-logo-orange text-transparent bg-clip-text">Ein PlayCover-Teamprodukt</h1>
 
 						<!-- alex credits -->
 						<div class="relative">
 							<!-- placeholder -->
-							<p class="text-lg text-transparent transition duration-200 ease-in-out">Presented by <span class="font-neon font-medium">Alexandr Dorofeev</span></p>
+							<p class="text-lg text-transparent transition duration-200 ease-in-out">Präsentiert von <span class="font-neon font-medium">Alexandr Dorofeev</span></p>
 
 							<!-- text -->
-							<p class="text-lg absolute inset-0 z-30 transition duration-200 ease-in-out">Presented by <span class="text-pink-600 dark:text-gray-300 transition duration-200 ease-in-out font-neon font-medium">Alexandr Dorofeev</span></p>
+							<p class="text-lg absolute inset-0 z-30 transition duration-200 ease-in-out">Präsentiert von <span class="text-pink-600 dark:text-gray-300 transition duration-200 ease-in-out font-neon font-medium">Alexandr Dorofeev</span></p>
 
 							<!-- bg blur -->
-							<p class="text-lg text-transparent bg-gradient-to-r absolute inset-0 blur-sm dark:text-transparent transition duration-200 ease-in-out">Presented by <span class="text-pink-100 dark:text-red-600 transition duration-200 ease-in-out font-neon font-medium">Alexandr Dorofeev</span></p>
+							<p class="text-lg text-transparent bg-gradient-to-r absolute inset-0 blur-sm dark:text-transparent transition duration-200 ease-in-out">Präsentiert von <span class="text-pink-100 dark:text-red-600 transition duration-200 ease-in-out font-neon font-medium">Alexandr Dorofeev</span></p>
 						</div>
 					</div>
 
@@ -397,11 +395,11 @@
 				<section class="flex flex-col md:flex-row md:justify-between pb-5 md:items-center space-y-2">
 					<!-- legal notice and copyright claim -->
 					<div class="flex items-center">
-						<a href="/legal-notice/" class="pr-4 hover:text-yellow-500 underline text-left">Legal Notice</a>
-						<a href="mailto:write2me4help@gmail.com" class="underline hover:text-yellow-500">Copyright Claims</a>
+						<a href="/lang/de/legal-notice/" class="pr-4 hover:text-yellow-500 underline text-left">Rechtlicher Hinweis</a>
+						<a href="mailto:write2me4help@gmail.com" class="underline hover:text-yellow-500">Urheberrechtsansprüche</a>
 					</div>
 
-					<p class="inline">Copyright © 2021 Alexandr Dorofeev. All rights reserved.</p>
+					<p class="inline">Copyright © 2021 Alexandr Dorofeev. Alle Rechte vorbehalten.</p>
 				</section>
 			</div>
 		</footer>
@@ -420,5 +418,6 @@
 		<script src="/js/contact-popup.js"></script>
 		<script src="/js/auto-closer.js"></script>
 		<script src="/js/animator.js"></script>
+		<script src="/js/changelog.js"></script>
 	</body>
 </html>
