added legal notice pages and fixed relative links in all pages

--- a/public/lang/es/changelog/index.html
+++ b/public/lang/es/changelog/index.html
@@ -28,7 +28,7 @@
 			<div class="flex justify-between">
 				<!-- logo -->
 				<div class="flex items-center lg:mr-10 xl:pl-10">
-					<a href="/" class="flex items-center">
+					<a href="/lang/es" class="flex items-center">
 						<img class="h-9 rounded-lg" src="/assets/logo.svg" alt="" />
 						<span class="text-2xl pl-2 bg-gradient-to-b from-logo-pink to-logo-orange text-transparent bg-clip-text font-semibold">PlayCover</span>
 					</a>
@@ -36,12 +36,12 @@
 
 				<!-- primary nav -->
 				<div class="hidden xl:flex items-center space-x-10 pt-1 text-[1.05rem]">
-					<a href="/" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> Inicio </a>
+					<a href="/lang/es" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> Inicio </a>
 					<!-- download nav download -->
 					<a href="" class="download-buttons text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> Descargar </a>
-					<a href="/changelog/" class="text-yellow-500 border-b-2 border-yellow-500 py-3"> Cambios </a>
-					<a href="/faq/" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> FAQ </a>
-					<a href="/credits/" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> Créditos </a>
+					<a href="/lang/es/changelog/" class="text-yellow-500 border-b-2 border-yellow-500 py-3"> Cambios </a>
+					<a href="/lang/es/faq/" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> FAQ </a>
+					<a href="/lang/es/credits/" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> Créditos </a>
 					<button class="contact-nav-button text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150">Contacto</button>
 				</div>
 
@@ -136,11 +136,11 @@
 			<!-- mobile menu -->
 			<div class="mobile-menu xl:hidden max-h-[85vh] overflow-auto hidden relative">
 				<div class="flex flex-col items-center space-y-5 pt-5 pb-3 text-lg md:text-xl">
-					<a href="/" class="block text-gray-600 dark:text-gray-300">Inicio</a>
+					<a href="/lang/es" class="block text-gray-600 dark:text-gray-300">Inicio</a>
 					<a href="" class="download-buttons block text-gray-600 dark:text-gray-300">Descargar</a>
-					<a href="./" class="block text-yellow-600 pb-1 border-b-2 border-yellow-600">Cambios</a>
-					<a href="/faq/" class="block text-gray-600 dark:text-gray-300">FAQ</a>
-					<a href="/credits/" class="block text-gray-600 dark:text-gray-300">Créditos</a>
+					<a href="/lang/es/changelog" class="block text-yellow-600 pb-1 border-b-2 border-yellow-600">Cambios</a>
+					<a href="/lang/es/faq/" class="block text-gray-600 dark:text-gray-300">FAQ</a>
+					<a href="/lang/es/credits/" class="block text-gray-600 dark:text-gray-300">Créditos</a>
 					<button class="mobile-contact-button block text-gray-600 dark:text-gray-300">Contacto</button>
 
 					<!-- mobile language button -->
@@ -735,24 +735,7 @@
 								<a href="mailto:Jay@playcover.app">AJ - jay@playcover.app</a>
 							</div>
 
-							<!-- backend -->
-							<div class="hidden flex-col items-center text-white">
-								<svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-									<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10.325 4.317c.426-1.756 2.924-1.756 3.35 0a1.724 1.724 0 002.573 1.066c1.543-.94 3.31.826 2.37 2.37a1.724 1.724 0 001.065 2.572c1.756.426 1.756 2.924 0 3.35a1.724 1.724 0 00-1.066 2.573c.94 1.543-.826 3.31-2.37 2.37a1.724 1.724 0 00-2.572 1.065c-.426 1.756-2.924 1.756-3.35 0a1.724 1.724 0 00-2.573-1.066c-1.543.94-3.31-.826-2.37-2.37a1.724 1.724 0 00-1.065-2.572c-1.756-.426-1.756-2.924 0-3.35a1.724 1.724 0 001.066-2.573c-.94-1.543.826-3.31 2.37-2.37.996.608 2.296.07 2.572-1.065z" />
-									<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z" />
-								</svg>
-								<p class="text-lg font-medium pr-2 pl-1">Backend</p>
-								<a href="mailto:hades@playcover.app">Hades - hades@playcover.app</a>
-							</div>
-
-							<!-- commercial agent -->
-							<div class="hidden  flex-col items-center text-white">
-								<svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-									<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5.121 17.804A13.937 13.937 0 0112 16c2.5 0 4.847.655 6.879 1.804M15 10a3 3 0 11-6 0 3 3 0 016 0zm6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
-								</svg>
-								<p class="text-lg font-medium pr-2 pl-1">Commercial Agent</p>
-								<a href="mailto:ke@playcover.app">ProfiSpieler - ke@playcover.app</a>
-							</div>
+							
 						</div>
 					</div>
 				</div>
@@ -784,14 +767,7 @@
 
 					<!-- links -->
 					<div class="flex items-end space-x-0 md:pt-0">
-						<!-- Profispieler logos -->
-						<a href="mailto:ke@playcover.app" class="hidden">
-							<!-- light -->
-							<img class="dark:hidden h-16" src="/assets/ProPlayer-logo-light.jpg" alt="Pro Player Light Logo" />
-
-							<!-- dark -->
-							<img class="hidden dark:inline h-16" src="/assets/ProPlayer-logo-dark.jpg" alt="Pro Player Dark Logo" />
-						</a>
+						
 
 						<!-- github -->
 						<a href="https://github.com/Letscoder/PlayCover" target="_blank" class="flex flex-col group pr-5">
@@ -817,7 +793,7 @@
 				<section class="flex flex-col md:flex-row md:justify-between pb-5 md:items-center space-y-2">
 					<!-- legal notice and copyright claim -->
 					<div class="flex items-center">
-						<a href="/legal-notice/" class="pr-4 hover:text-yellow-500 underline text-left">Legal Notice</a>
+						<a href="/lang/es/legal-notice/" class="pr-4 hover:text-yellow-500 underline text-left">Aviso Legal</a>
 						<a href="mailto:write2me4help@gmail.com" class="underline hover:text-yellow-500">Reclamaciones de derechos de autor</a>
 					</div>
 
