--- a/public/lang/id/legal-notice/index.html
+++ b/public/lang/id/legal-notice/index.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta name="description" content="site description" />
 		<meta name="keywords" content="8-12 words max" />
-		<title>Legal Notice</title>
+		<title>Pertanyaan umum</title>
 		<link href="/css/styles.css" rel="stylesheet" />
 		<link rel="shortcut icon" type="image/jpg" href="/assets/favicon.png" />
 		<script src="/js/local-storage-track.js"></script>
@@ -24,11 +24,11 @@
 
 	<body class="flex flex-col h-screen justify-between bg-gray-100 dark:bg-[#171717] font-montserrat transition duration-200 ease-in-out">
 		<!-- nav bar -->
-		<nav class="max-w-screen px-6 lg:pr-12 lg:pl-14 mx-auto py-3 lg:py-1 fixed w-screen top-0 bg-white dark:bg-[#141414] transition duration-200 ease-in-out filter drop-shadow-md z-20">
+		<nav class="max-w-screen px-6 lg:pr-12 lg:pl-1 mx-auto py-3 lg:py-1 fixed w-screen top-0 bg-white dark:bg-[#141414] transition duration-200 ease-in-out filter drop-shadow-md z-20">
 			<div class="flex justify-between">
 				<!-- logo -->
-				<div class="flex items-center lg:mr-10 xl:pl-10">
-					<a href="/" class="flex items-center">
+				<div class="flex items-center lg:mr-2 xl:pl-10">
+					<a href="/lang/id" class="flex items-center">
 						<img class="h-9 rounded-lg" src="/assets/logo.svg" alt="" />
 						<span class="text-2xl pl-2 bg-gradient-to-b from-logo-pink to-logo-orange text-transparent bg-clip-text font-semibold">PlayCover</span>
 					</a>
@@ -36,13 +36,13 @@
 
 				<!-- primary nav -->
 				<div class="hidden xl:flex items-center space-x-10 pt-1 text-[1.05rem]">
-					<a href="/" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> Home </a>
+					<a href="/lang/id" class="w-20 text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> Halaman Utama </a>
 					<!-- download nav download -->
-					<a href="" class="download-buttons text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> Download </a>
-					<a href="/changelog/" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> Changelog </a>
-					<a href="/faq/" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> FAQ </a>
-					<a href="/credits/" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> Credits </a>
-					<button class="contact-nav-button text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150">Contact Us</button>
+					<a href="" class="download-buttons text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> Unduhan </a>
+					<a href="/lang/id/changelog/" class="w-24 text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> Sejarah Perubahan </a>
+					<a href="/lang/id/faq/" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> Pertanyaan umum </a>
+					<a href="/lang/id/credits/" class="text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150"> Kredit </a>
+					<button class="contact-nav-button text-gray-800 dark:text-gray-300 hover:text-yellow-500 dark:hover:text-yellow-500 transition-colors duration-150">Pesan Bantuan</button>
 				</div>
 
 				<!-- secondary nav -->
@@ -51,7 +51,7 @@
 					<div class="relative">
 						<div class="h-[3.5rem] flex items-center">
 							<button class="group donate-nav-button border-b-2 border-yellow-500 hover:border-b-4 bg-yellow-400 dark:bg-[#791c0c] dark:border-[#410e05] active:border-none rounded-md px-3 py-[0.29rem] transition duration-100 ease-linear md:hover:translate-y-[-0.15rem]">
-								<span class="text-[1.05rem] text-white transition-colors duration-200"> Donate </span>
+								<span class="text-[1.05rem] text-white transition-colors duration-200"> Donasi </span>
 							</button>
 						</div>
 					</div>
@@ -61,7 +61,7 @@
 						<li class="relative text-[1.05rem]">
 							<!-- language btn -->
 							<button class="language-button flex items-center space-x-1 border border-gray-500 dark:border-gray-400 rounded-md px-3 py-1 transition-colors duration-200 group hover:border-yellow-600 dark:hover:border-yellow-500">
-								<span class="text-gray-800 dark:text-gray-300 transition-colors duration-200 group-hover:text-yellow-600 dark:group-hover:text-yellow-500"> English </span>
+								<span class="text-gray-800 dark:text-gray-300 transition-colors duration-200 group-hover:text-yellow-600 dark:group-hover:text-yellow-500 text-sm"> Bahasa Indonesia </span>
 								<!-- icon -->
 								<div class="">
 									<svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 transition duration-200 dark:text-gray-300 group-hover:text-yellow-600 dark:group-hover:text-yellow-500 transform language-menu-icon" fill="none" viewbox="0 0 24 24" stroke="currentColor">
@@ -87,7 +87,7 @@
 										<a href="/lang/de" class="text-gray-700 hover:text-yellow-500 dark:text-gray-300 dark:hover:text-yellow-500 transition-colors duration-200"> Deutsch </a>
 									</li>
 									<li>
-										<a href="/lang/id" class="text-gray-700 hover:text-yellow-500 dark:text-gray-300 dark:hover:text-yellow-500 transition-colors duration-200"> Bahasa Indonesia </a>
+										<a href="/index.html" class="text-gray-700 hover:text-yellow-500 dark:text-gray-300 dark:hover:text-yellow-500 transition-colors duration-200"> English </a>
 									</li>
 
 									<li class="hidden">
@@ -133,20 +133,19 @@
 					</div>
 				</div>
 			</div>
-
 			<!-- mobile menu -->
 			<div class="mobile-menu xl:hidden max-h-[85vh] overflow-auto hidden relative">
 				<div class="flex flex-col items-center space-y-5 pt-5 pb-3 text-lg md:text-xl">
-					<a href="/" class="block text-gray-600 dark:text-gray-300">Home</a>
-					<a href="" class="download-buttons block text-gray-600 dark:text-gray-300">Download</a>
-					<a href="/changelog/" class="block text-gray-600 dark:text-gray-300">Changelog</a>
-					<a href="/faq/" class="block text-gray-600 dark:text-gray-300">FAQ</a>
-					<a href="/credits/" class="block text-gray-600 dark:text-gray-300">Credits</a>
-					<button class="mobile-contact-button block text-gray-600 dark:text-gray-300">Contact Us</button>
+					<a href="/lang/id" class="block text-gray-600 dark:text-gray-300">Halaman Utama</a>
+					<a href="" class="download-buttons block text-gray-600 dark:text-gray-300">Unduhan</a>
+					<a href="/lang/id/changelog/" class="block text-gray-600 dark:text-gray-300">Sejarah Perubahan</a>
+					<a href="/lang/id/faq/" class="block text-gray-600 dark:text-gray-300">Pertanyaan umum</a>
+					<a href="/lang/id/credits/" class="block text-gray-600 dark:text-gray-300">Kredit</a>
+					<button class="mobile-contact-button block text-gray-600 dark:text-gray-300">Pesan Bantuan</button>
 
 					<!-- mobile language button -->
 					<button class="mobile-language-button text-gray-600 dark:text-gray-300 flex items-center space-x-1">
-						<p class="pl-3">English</p>
+						<p class="pl-3">Bahasa Indonesia</p>
 						<!-- icon -->
 						<div class="pt-0">
 							<svg xmlns="http://www.w3.org/2000/svg" class="mobile-lang-icon transform h-5 w-5 transition-colors duration-200 group-hover:text-pink-500" fill="none" viewbox="0 0 24 24" stroke="currentColor">
@@ -164,16 +163,15 @@
 							<a href="/lang/es">Español</a>
 							
 							<a href="/lang/kr" class="hidden">한국어</a>
-							<a href="/lang/id" class="flex flex-col items-center justify-center">Bahasa <span>Indonesia</span> </a>
+							<a href="/index.html" class="flex flex-col items-center justify-center">English </a>
 						</div>
 					</div>
 
-					<button class="mobile-donate-button block text-gold">Donate</button>
+					<button class="mobile-donate-button block text-gold">Donasi</button>
 				</div>
 			</div>
 		</nav>
 
-		<!-- auto closer for lang menu -->
 		<!-- auto closer for lang menu -->
 		<div class="auto-closer hidden z-10 w-[100%] h-2 absolute"></div>
 
@@ -181,31 +179,30 @@
 		<main class="pb-16">
 			<!-- heading -->
 			<header class="pt-32 xl:pt-36 pb-2 flex justify-center">
-				<span class="hidden lg:flex font-semibold lg:text-5xl text-gray-700 dark:text-yellow-500 transition duration-200">Legal Notice</span>
+				<span class="hidden lg:flex font-semibold lg:text-5xl text-gray-700 dark:text-yellow-500 transition duration-200">Legalitas</span>
 				<span class="lg:hidden flex flex-col text-4xl font-semibold text-gray-700 dark:text-yellow-500 transition duration-200 space-y-3">
-					<p>Legal</p>
-					<p>Notice</p>
+					<p>Legalitas</p>
 				</span>
 			</header>
 
 			<!-- paras -->
 			<section class="px-10 lg:px-52 pt-20 space-y-10 text-gray-700 dark:text-gray-300">
 				<section class="space-y-2">
-					<h2 class="font-medium text-2xl">Copyright Notice</h2>
+					<h2 class="font-medium text-2xl">Pemberitahuan Hak Cipta</h2>
 					<div class="pl-5 pt-2">
 						<ul class="list-outside list-disc space-y-3">
-							<li>All contents, software, programs, code, technologies and user interfaces contained on this website are protected by the copyright laws. The copyright belongs to Alexandr Dorofeev and is subject to relevant copyright conventions.</li>
-							<li>Alexandr Dorofeev reserves the right to pursue legal responsibilities if any use of the aforesaid copyright is beyond the scope of reasonable use and without its written permission.</li>
+							<li>Semua konten, perangkat lunak, program, kode, teknologi, dan antarmuka pengguna yang terdapat di situs web ini dilindungi oleh undang-undang hak cipta. Hak cipta milik Alexandr Dorofeev dan tunduk pada konvensi hak cipta yang relevan.</li>
+							<li>Alexandr Dorofeev berhak untuk menuntut tanggung jawab hukum jika penggunaan hak cipta tersebut di atas berada di luar cakupan penggunaan yang wajar dan tanpa izin tertulis darinya.</li>
 						</ul>
 					</div>
 				</section>
 
 				<section class="space-y-2">
-					<h2 class="font-medium text-2xl">Trademark Statement</h2>
+					<h2 class="font-medium text-2xl">Pernyataan Merek Dagang</h2>
 					<div class="pl-5 pt-2">
 						<ul class="list-outside list-disc space-y-3">
-							<li>All trademarks and marks used and displayed on this website belong to Alexandr Dorofeev and are protected by international conventions.</li>
-							<li>Without prior written permission of Alexandr Dorofeev, trademarks, marks and software names of Alexandr Dorofeev shall not be used in any manner whatsoever. Unauthorized use of the aforesaid trademarks may constitute trademark infringement and Alexandr Dorofeev reserves the right to pursue legal responsibilities.</li>
+							<li>Semua merek dagang dan merek yang digunakan dan ditampilkan di situs web ini adalah milik Alexandr Dorofeev dan dilindungi oleh konvensi internasional.</li>
+							<li>Tanpa izin tertulis sebelumnya dari Alexandr Dorofeev, merek dagang, merek, dan nama perangkat lunak Alexandr Dorofeev tidak boleh digunakan dengan cara apa pun. Penggunaan yang tidak sah dari merek dagang tersebut di atas dapat merupakan pelanggaran merek dagang dan Alexandr Dorofeev berhak untuk mengejar tanggung jawab hukum.</li>
 						</ul>
 					</div>
 				</section>
@@ -227,7 +224,7 @@
 					</div>
 
 					<!-- text -->
-					<p class="pt-12 pb-8 font-light text-white text-3xl">Donate via...</p>
+					<p class="pt-12 pb-8 font-light text-white text-3xl">Donasi melalui...</p>
 
 					<!-- donate options -->
 					<div class="flex items-center pb-4 space-x-4 px-8 lg:px-0">
@@ -315,24 +312,7 @@
 								<a href="mailto:Jay@playcover.app">AJ - jay@playcover.app</a>
 							</div>
 
-							<!-- backend -->
-							<div class="hidden flex-col items-center text-white">
-								<svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-									<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10.325 4.317c.426-1.756 2.924-1.756 3.35 0a1.724 1.724 0 002.573 1.066c1.543-.94 3.31.826 2.37 2.37a1.724 1.724 0 001.065 2.572c1.756.426 1.756 2.924 0 3.35a1.724 1.724 0 00-1.066 2.573c.94 1.543-.826 3.31-2.37 2.37a1.724 1.724 0 00-2.572 1.065c-.426 1.756-2.924 1.756-3.35 0a1.724 1.724 0 00-2.573-1.066c-1.543.94-3.31-.826-2.37-2.37a1.724 1.724 0 00-1.065-2.572c-1.756-.426-1.756-2.924 0-3.35a1.724 1.724 0 001.066-2.573c-.94-1.543.826-3.31 2.37-2.37.996.608 2.296.07 2.572-1.065z" />
-									<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z" />
-								</svg>
-								<p class="text-lg font-medium pr-2 pl-1">Backend</p>
-								<a href="mailto:hades@playcover.app">Hades - hades@playcover.app</a>
-							</div>
-
-							<!-- commercial agent -->
-							<div class="hidden  flex-col items-center text-white">
-								<svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-									<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5.121 17.804A13.937 13.937 0 0112 16c2.5 0 4.847.655 6.879 1.804M15 10a3 3 0 11-6 0 3 3 0 016 0zm6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
-								</svg>
-								<p class="text-lg font-medium pr-2 pl-1">Commercial Agent</p>
-								<a href="mailto:ke@playcover.app">ProfiSpieler - ke@playcover.app</a>
-							</div>
+							
 						</div>
 					</div>
 				</div>
@@ -347,32 +327,23 @@
 					<!-- text -->
 					<div class="pt-6 md:pt-0 flex flex-col space-y-1">
 						<!-- logo -->
-						<h1 class="font-semibold text-xl bg-gradient-to-b from-logo-pink to-logo-orange text-transparent bg-clip-text">A PlayCover Team Product</h1>
+						<h1 class="font-semibold text-xl bg-gradient-to-b from-logo-pink to-logo-orange text-transparent bg-clip-text">Produk Tim PlayCover</h1>
 
 						<!-- alex credits -->
 						<div class="relative">
 							<!-- placeholder -->
-							<p class="text-lg text-transparent transition duration-200 ease-in-out">Presented by <span class="font-neon font-medium">Alexandr Dorofeev</span></p>
+							<p class="text-lg text-transparent transition duration-200 ease-in-out">Disajikan oleh <span class="font-neon font-medium">Alexandr Dorofeev</span></p>
 
 							<!-- text -->
-							<p class="text-lg absolute inset-0 z-30 transition duration-200 ease-in-out">Presented by <span class="text-pink-600 dark:text-gray-300 transition duration-200 ease-in-out font-neon font-medium">Alexandr Dorofeev</span></p>
+							<p class="text-lg absolute inset-0 z-30 transition duration-200 ease-in-out">Disajikan oleh <span class="text-pink-600 dark:text-gray-300 transition duration-200 ease-in-out font-neon font-medium">Alexandr Dorofeev</span></p>
 
 							<!-- bg blur -->
-							<p class="text-lg text-transparent bg-gradient-to-r absolute inset-0 blur-sm dark:text-transparent transition duration-200 ease-in-out">Presented by <span class="text-pink-100 dark:text-red-600 transition duration-200 ease-in-out font-neon font-medium">Alexandr Dorofeev</span></p>
+							<p class="text-lg text-transparent bg-gradient-to-r absolute inset-0 blur-sm dark:text-transparent transition duration-200 ease-in-out">Disajikan oleh <span class="text-pink-100 dark:text-red-600 transition duration-200 ease-in-out font-neon font-medium">Alexandr Dorofeev</span></p>
 						</div>
 					</div>
 
 					<!-- links -->
 					<div class="flex items-end space-x-0 md:pt-0">
-						<!-- Profispieler logos -->
-						<a href="mailto:ke@playcover.app" class="hidden">
-							<!-- light -->
-							<img class="dark:hidden h-16" src="/assets/ProPlayer-logo-light.jpg" alt="Pro Player Light Logo" />
-
-							<!-- dark -->
-							<img class="hidden dark:inline h-16" src="/assets/ProPlayer-logo-dark.jpg" alt="Pro Player Dark Logo" />
-						</a>
-
 						<!-- github -->
 						<a href="https://github.com/Letscoder/PlayCover" target="_blank" class="flex flex-col group pr-5">
 							<svg class="h-9 pb-1 md:pb-[0] fill-current text-gray-900 dark:text-gray-200" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 512 512"><path d="M256 5.3C114.6 5.3 0 120.4 0 262.3a257 257 0 00175.1 244c12.8 2.3 17.5-5.6 17.5-12.5l-.4-43.7C121 465.6 106 415.7 106 415.7 94.4 386 77.6 378 77.6 378c-23.3-16 1.7-15.7 1.7-15.7 25.7 1.9 39.2 26.5 39.2 26.5 22.8 39.3 60 28 74.5 21.4 2.3-16.6 9-28 16.3-34.4-56.9-6.5-116.6-28.5-116.6-127 0-28 10-51 26.3-69-2.6-6.5-11.4-32.6 2.5-68 0 0 21.5-6.9 70.4 26.4a244.2 244.2 0 01128.2 0C369 105 390.5 112 390.5 112c14 35.3 5.1 61.5 2.5 68 16.4 18 26.3 40.9 26.3 69 0 98.7-59.8 120.4-116.8 126.8 9.1 7.9 17.3 23.6 17.3 47.5 0 34.4-.3 62.1-.3 70.5 0 7 4.6 15 17.6 12.4A257 257 0 00512 262.4c0-142-114.6-257-256-257z" /></svg>
@@ -397,8 +368,8 @@
 				<section class="flex flex-col md:flex-row md:justify-between pb-5 md:items-center space-y-2">
 					<!-- legal notice and copyright claim -->
 					<div class="flex items-center">
-						<a href="/legal-notice/" class="pr-4 hover:text-yellow-500 underline text-left">Legal Notice</a>
-						<a href="mailto:write2me4help@gmail.com" class="underline hover:text-yellow-500">Copyright Claims</a>
+						<a href="/lang/id/legal-notice/" class="pr-4 hover:text-yellow-500 underline text-left">Legalitas</a>
+						<a href="mailto:write2me4help@gmail.com" class="underline hover:text-yellow-500">Klaim Hak Cipta</a>
 					</div>
 
 					<p class="inline">Copyright © 2021 Alexandr Dorofeev. All rights reserved.</p>
@@ -409,13 +380,14 @@
 		<!-- fixer for css classes used in js files but not compiled by tailwind-->
 		<!-- when JIT watch mode is run again, it checks html file and removes all the classes from styles.css that doesn't exist in the html file even tho they exist in the js files hence it breaks stuff -->
 		<!-- add the classes used in js files here to fix -->
-		<div class="hidden rotate-180 dark:shadow border-transparent dark:border-transparent bg-gray-300 dark:bg-[#1a1a1a] animate-bounce animate-pulse overflow-hidden"></div>
+		<div class="hidden rotate-180 dark:shadow border-transparent dark:border-transparent bg-gray-300 dark:bg-[#222222] animate-bounce animate-pulse"></div>
 
 		<!-- js -->
 		<script src="/js/language-button.js"></script>
 		<script src="/js/download-link.js"></script>
 		<script src="/js/mobile-buttons.js"></script>
 		<script src="/js/dark-mode.js"></script>
+		<script src="/js/question-activator.js"></script>
 		<script src="/js/donate-popup.js"></script>
 		<script src="/js/contact-popup.js"></script>
 		<script src="/js/auto-closer.js"></script>
